# stm32-bmp280-hil

./: .gitignore  README.md  docker-compose.yaml  requirements.txt
.github/workflows/: hil_test.yaml
docker/: build.Dockerfile  build_firmware.sh  ci.Dockerfile
firmware/: Makefile  firmware.ioc
firmware/Core/Src/: main.c
firmware/Drivers/BMP280/inc/: BMP280.hpp  BMP280_Wrapper.h
firmware/Drivers/BMP280/src/: BMP280.cpp  BMP280_Wrapper.cpp
scripts/: build_elf_docker.sh  flash_and_test.py
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  test_bmp280_flow.cpp
tests/mocks/: mock_hal_i2c.cpp  stm32_hal_mock.h
tests/unit/: CMakeLists.txt  test_bmp280_math.cpp
